Tournament db save and some refactor.