@@ -5,53 +5,67 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 import com.github.tix320.jouska.core.application.game.Game;
-import com.github.tix320.jouska.core.application.game.GameWithSettings;
-import com.github.tix320.jouska.core.application.game.TournamentState;
-import com.github.tix320.jouska.core.application.game.creation.GameFactory;
+import com.github.tix320.jouska.core.application.game.GamePlayer;
+import com.github.tix320.jouska.core.application.game.PlayerColor;
+import com.github.tix320.jouska.core.application.game.creation.ClassicPlayOffSettings;
 import com.github.tix320.jouska.core.application.game.creation.GameSettings;
+import com.github.tix320.jouska.core.application.game.creation.RestorablePlayOffSettings;
+import com.github.tix320.jouska.core.infrastructure.RestoreException;
 import com.github.tix320.jouska.core.model.Player;
 import com.github.tix320.jouska.core.util.MathUtils;
 import com.github.tix320.kiwi.api.reactive.observable.MonoObservable;
 import com.github.tix320.kiwi.api.reactive.observable.Observable;
 import com.github.tix320.kiwi.api.reactive.property.Property;
-import com.github.tix320.kiwi.api.reactive.publisher.CachedPublisher;
-import com.github.tix320.kiwi.api.reactive.publisher.Publisher;
 import com.github.tix320.kiwi.api.util.None;
 
-public class ClassicPlayOff implements PlayOff {
+public class ClassicPlayOff implements RestorablePlayOff {
 
-	private final GameSettings baseSettings;
+	private final ClassicPlayOffSettings settings;
 
 	private final List<Player> players;
 
-	private final List<List<PlayOffGame>> games;
+	private final Property<List<List<PlayOffGame>>> tours;
 
-	private final CachedPublisher<GameWithSettings> createdGamesPublisher;
-
-	private final Property<TournamentState> playOffState;
+	private final Property<PlayOffState> state;
 
 	private final AtomicReference<Player> winner;
 
-	public ClassicPlayOff(GameSettings baseSettings, List<Player> players) {
+	public static ClassicPlayOff create(List<Player> players, ClassicPlayOffSettings settings) {
 		int playersCount = players.size();
 		if (playersCount < 2) {
-			throw new IllegalArgumentException("Players count must be >=2");
+			throw new IllegalArgumentException("Players count must be more than 1");
 		}
 
-		int gamePlayersCount = baseSettings.getPlayersCount();
+		int gamePlayersCount = settings.getBaseGameSettings().getPlayersCount();
 		if (gamePlayersCount != 2) {
 			throw new IllegalStateException(
 					String.format("Invalid players count %s. Classic play off game must be for two players",
 							gamePlayersCount));
 		}
 
-		this.baseSettings = baseSettings;
-		this.playOffState = Property.forObject(TournamentState.IN_PROGRESS);
-		this.players = Collections.unmodifiableList(players);
-		this.createdGamesPublisher = Publisher.cached();
-		this.games = initGamesSpace(playersCount);
+		return new ClassicPlayOff(players, settings);
+	}
+
+
+	private ClassicPlayOff(List<Player> players, ClassicPlayOffSettings settings) {
+		this.settings = settings;
+		this.state = Property.forObject(PlayOffState.INITIAL);
+		this.players = List.copyOf(players);
+		this.tours = Property.forObject(initGamesSpace(players.size()));
 		this.winner = new AtomicReference<>();
+	}
+
+	@Override
+	public synchronized void start() {
+		failIfStarted();
+
 		fillFirstTour();
+		state.setValue(PlayOffState.RUNNING);
+	}
+
+	@Override
+	public RestorablePlayOffSettings getSettings() {
+		return settings;
 	}
 
 	@Override
@@ -60,21 +74,17 @@ public class ClassicPlayOff implements PlayOff {
 	}
 
 	@Override
-	public List<List<PlayOffGame>> getGamesStructure() {
-		return games.stream()
-				.map(ArrayList::new)
-				.collect(Collectors.toUnmodifiableList()); // return deep immutable copy
-	}
-
-	@Override
-	public Observable<GameWithSettings> createdGames() {
-		return createdGamesPublisher.asObservable();
+	public Observable<List<List<PlayOffGame>>> getTours() {
+		return tours.asObservable()
+				.map(tours -> tours.stream()
+						.map(List::copyOf)
+						.collect(Collectors.toUnmodifiableList())); // return deep immutable copy
 	}
 
 	@Override
 	public MonoObservable<None> completed() {
-		return playOffState.asObservable()
-				.filter(tournamentState -> tournamentState == TournamentState.COMPLETED)
+		return state.asObservable()
+				.filter(playOffState -> playOffState == PlayOffState.COMPLETED)
 				.map(tournamentState -> None.SELF)
 				.toMono();
 	}
@@ -84,16 +94,62 @@ public class ClassicPlayOff implements PlayOff {
 		return Optional.ofNullable(winner.get());
 	}
 
+	@Override
+	public synchronized void restore(List<List<PlayOffGame>> structure) throws RestoreException {
+		if (state.getValue() != PlayOffState.INITIAL) {
+			throw new RestoreException("Play-off already started");
+		}
+
+		try {
+			List<List<PlayOffGame>> tours = this.tours.getValue();
+			for (int i = 0; i < tours.size(); i++) {
+				List<PlayOffGame> tour = tours.get(i);
+				for (int j = 0; j < tour.size(); j++) {
+					PlayOffGame playOffGameToReplace = Objects.requireNonNull(structure.get(i).get(j));
+					tour.set(j, playOffGameToReplace);
+				}
+			}
+
+			for (int i = 0; i < tours.size(); i++) {
+				List<PlayOffGame> tour = tours.get(i);
+				for (int j = 0; j < tour.size(); j++) {
+					PlayOffGame playOffGame = tour.get(j);
+					Game game = playOffGame.getGame();
+					if (game != null && !game.isCompleted()) {
+						int tourIndex = i;
+						int tourGameIndex = j;
+						game.completed().subscribe(g -> onGameComplete(tourIndex, tourGameIndex, game));
+					}
+				}
+			}
+			state.setValue(PlayOffState.RUNNING);
+
+			Game lastGame = tours.get(tours.size() - 1).get(0).getGame();
+			if (lastGame != null && lastGame.isCompleted()) {
+				Property.inAtomicContext(() -> {
+					winner.set(lastGame.getWinner().orElseThrow().getRealPlayer());
+					state.setValue(PlayOffState.COMPLETED);
+				});
+			}
+		}
+		catch (RuntimeException e) {
+			throw new RestoreException("Failed to restore.", e);
+		}
+
+	}
+
 	private void fillFirstTour() {
 		Iterator<Player> playersIterator = players.iterator();
 
-		List<PlayOffGame> firstTourGames = this.games.get(0);
+		List<List<PlayOffGame>> tours = this.tours.getValue();
+		List<PlayOffGame> firstTourGames = tours.get(0);
 
 		if (players.size() % 2 == 0) {
 			for (int i = 0; i < firstTourGames.size(); i++) {
 				Player firstPlayer = playersIterator.next();
 				Player secondPlayer = playersIterator.next();
-				createNewGame(firstPlayer, secondPlayer, 0, i);
+				PlayOffGame playOffGame = createNewGame(firstPlayer, secondPlayer);
+				registerGame(playOffGame, 0, i);
 			}
 		}
 		else {
@@ -101,88 +157,108 @@ public class ClassicPlayOff implements PlayOff {
 				Player firstPlayer = playersIterator.next();
 				Player secondPlayer = playersIterator.next();
 
-				createNewGame(firstPlayer, secondPlayer, 0, i);
+				PlayOffGame playOffGame = createNewGame(firstPlayer, secondPlayer);
+				registerGame(playOffGame, 0, i);
 			}
 
 			int lastGameIndex = firstTourGames.size() - 1;
 			Player singlePlayer = playersIterator.next();
-			createNewGame(singlePlayer, null, 0, lastGameIndex);
+			PlayOffGame playOffGame = createNewGame(singlePlayer, null);
+			registerGame(playOffGame, 0, lastGameIndex);
 		}
 	}
 
 	private void onGameComplete(int tourIndex, int tourGameIndex, Game game) {
 		Player winnerOfPreviousGame = game.getWinner().orElseThrow().getRealPlayer();
 
-		int toursCount = games.size();
+		List<List<PlayOffGame>> tours = this.tours.getValue();
+		int toursCount = tours.size();
 		if (tourIndex == toursCount - 1) { // last tour, last game
-			this.winner.set(winnerOfPreviousGame);
-			playOffState.setValue(TournamentState.COMPLETED);
+			Property.inAtomicContext(() -> {
+				state.setValue(PlayOffState.COMPLETED);
+				winner.set(winnerOfPreviousGame);
+			});
 		}
 		else {
 			int nextTourIndex = tourIndex + 1;
-			List<PlayOffGame> nextTourGames = games.get(nextTourIndex);
 			int nextTourGameIndex = tourGameIndex / 2; // 0 -> 0, 1 -> 0, 2 -> 1, 3 -> 1, 4 -> 2, 5 -> 2 ...
 			boolean mustBeFirstPlayer = tourGameIndex % 2 == 0;
 
-			PlayOffGame playOffGame = nextTourGames.get(nextTourGameIndex);
-			if (playOffGame.getFirstPlayer() != null && playOffGame.getSecondPlayer() != null) {
-				throw new IllegalStateException();
-			}
+			synchronized (this.tours) {
+				List<PlayOffGame> nextTourGames = tours.get(nextTourIndex);
+				PlayOffGame playOffGame = nextTourGames.get(nextTourGameIndex);
+				if (playOffGame.getFirstPlayer() != null && playOffGame.getSecondPlayer() != null) {
+					throw new IllegalStateException();
+				}
 
-			if (playOffGame.getFirstPlayer() != null) {
-				if (mustBeFirstPlayer) {
-					throw new IllegalStateException();
+				if (playOffGame.getFirstPlayer() != null) {
+					if (mustBeFirstPlayer) {
+						throw new IllegalStateException();
+					}
+					else {
+						PlayOffGame newGame = createNewGame(playOffGame.getFirstPlayer(), winnerOfPreviousGame);
+						registerGame(newGame, nextTourIndex, nextTourGameIndex);
+					}
+				}
+				else if (playOffGame.getSecondPlayer() != null) {
+					if (mustBeFirstPlayer) {
+						PlayOffGame newGame = createNewGame(winnerOfPreviousGame, playOffGame.getSecondPlayer());
+						registerGame(newGame, nextTourIndex, nextTourGameIndex);
+					}
+					else {
+						throw new IllegalStateException();
+					}
 				}
 				else {
-					createNewGame(playOffGame.getFirstPlayer(), winnerOfPreviousGame, nextTourIndex, nextTourGameIndex);
-				}
-			}
-			else if (playOffGame.getSecondPlayer() != null) {
-				if (mustBeFirstPlayer) {
-					createNewGame(winnerOfPreviousGame, playOffGame.getSecondPlayer(), nextTourIndex,
-							nextTourGameIndex);
-				}
-				else {
-					throw new IllegalStateException();
-				}
-			}
-			else {
-				if (mustBeFirstPlayer) {
-					nextTourGames.set(nextTourGameIndex, new PlayOffGame(winnerOfPreviousGame, null, null));
-				}
-				else {
-					nextTourGames.set(nextTourGameIndex, new PlayOffGame(null, winnerOfPreviousGame, null));
+					if (mustBeFirstPlayer) {
+						nextTourGames.set(nextTourGameIndex, new PlayOffGame(winnerOfPreviousGame, null, null));
+					}
+					else {
+						nextTourGames.set(nextTourGameIndex, new PlayOffGame(null, winnerOfPreviousGame, null));
+					}
 				}
 			}
 		}
 	}
 
-	private void createNewGame(Player firstPlayer, Player secondPlayer, int tourIndex, int tourGameIndex) {
+	private PlayOffGame createNewGame(Player firstPlayer, Player secondPlayer) {
 		Objects.requireNonNull(firstPlayer);
-
-		GameWithSettings gameWithSettings;
+		GameSettings baseGameSettings = this.settings.getBaseGameSettings();
 		PlayOffGame playOffGame;
 		if (secondPlayer == null) {
-			GameSettings gameSettings = this.baseSettings.changeName(String.format("%s VS <None>", firstPlayer))
+			GameSettings gameSettings = baseGameSettings.changeName(String.format("%s VS <None>", firstPlayer))
 					.changePlayersCount(1);
-			Game game = GameFactory.create(gameSettings, Set.of(firstPlayer));
+			Game game = gameSettings.createGame();
+			game.addPlayer(new GamePlayer(firstPlayer, PlayerColor.RED));
 			game.start();
 			game.forceCompleteGame(firstPlayer);
-			gameWithSettings = new GameWithSettings(game, gameSettings);
-			playOffGame = new PlayOffGame(firstPlayer, null, gameWithSettings);
+			playOffGame = new PlayOffGame(firstPlayer, null, game);
 		}
 		else {
-			GameSettings gameSettings = this.baseSettings.changeName(
+			GameSettings gameSettings = baseGameSettings.changeName(
 					String.format("%s VS %s", firstPlayer, secondPlayer));
-			Game game = GameFactory.create(gameSettings, Set.of(firstPlayer, secondPlayer));
-			gameWithSettings = new GameWithSettings(game, gameSettings);
-			playOffGame = new PlayOffGame(firstPlayer, secondPlayer, gameWithSettings);
+			Game game = gameSettings.createGame();
+			game.addPlayer(new GamePlayer(firstPlayer, PlayerColor.RED));
+			game.addPlayer(new GamePlayer(secondPlayer, PlayerColor.BLUE));
+			game.shufflePLayers();
+			playOffGame = new PlayOffGame(firstPlayer, secondPlayer, game);
 		}
 
-		games.get(tourIndex).set(tourGameIndex, playOffGame);
+		return playOffGame;
+	}
 
-		gameWithSettings.getGame().completed().subscribe(game -> onGameComplete(tourIndex, tourGameIndex, game));
-		createdGamesPublisher.publish(gameWithSettings);
+	private void registerGame(PlayOffGame playOffGame, int tourIndex, int tourGameIndex) {
+		tours.getValue().get(tourIndex).set(tourGameIndex, playOffGame);
+
+		Game game = playOffGame.getGame();
+		game.completed().subscribe(gameO -> onGameComplete(tourIndex, tourGameIndex, gameO));
+	}
+
+	private void failIfStarted() {
+		PlayOffState state = this.state.getValue();
+		if (state != PlayOffState.INITIAL) {
+			throw new TournamentIllegalStateException("Play-off already started");
+		}
 	}
 
 	private static List<List<PlayOffGame>> initGamesSpace(int playersCount) {
